# GhostBloods

./: .gitignore  README.md  crucix.config.mjs  package-lock.json  package.json
dashboard/public/: jarvis.html  settings.html
docs/: desktop.md
notifier/: lite-sweep.mjs  rss-feeds.json  scorer.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs  notifier.rs  tray.rs
